// This file defines the weather service, the getWeather rpc and the associated request and return types
// Protobuf can be used to generate go code that represents these objects

syntax = "proto3";
package weather;
option go_package = ".";

// Defines our weather service
service WeatherService {
    // Take coordinates and generate a summary of the weather at given location
    rpc GetWeather (WeatherRequest) returns (WeatherResponse) {}
}

enum UnitsType {
    IMPERIAL = 0;
    STANDARD = 1;
    METRIC = 2;
}

message WeatherRequest {
    double lat = 1;
    double lon = 2;
    optional UnitsType units = 3;
}

message WeatherResponse {
    string conditions = 1;
    string temp = 2;
    repeated WeatherAlert alerts = 3;
}

message WeatherAlert {
    string sender_name = 1;
    string event = 2;
    int64 start = 3;
    int64 end = 4;
    string description = 5;
}